// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HomePageContainer /> intially renders correctly 1`] = `
<styled.div>
  <styled.div>
    <img
      alt="Tayyib Stocks Logo"
      src="tstocks_full_logo.png"
    />
  </styled.div>
  <Dropdown
    additionLabel="Add "
    additionPosition="top"
    closeOnBlur={true}
    deburr={false}
    icon="dropdown"
    minCharacters={1}
    noResultsMessage="No results found."
    onChange={[Function]}
    onSearchChange={[Function]}
    openOnFocus={true}
    options={Array []}
    placeholder="Search for a stock..."
    renderLabel={[Function]}
    search={true}
    searchInput="text"
    selectOnBlur={true}
    selectOnNavigation={true}
    selection={true}
    wrapSelection={true}
  />
</styled.div>
`;

exports[`<HomePageContainer /> renders the HomePageContainer if companyOptions are present 1`] = `
<styled.div>
  <styled.div>
    <img
      alt="Tayyib Stocks Logo"
      src="tstocks_full_logo.png"
    />
  </styled.div>
  <Dropdown
    additionLabel="Add "
    additionPosition="top"
    closeOnBlur={true}
    deburr={false}
    icon="dropdown"
    minCharacters={1}
    noResultsMessage="No results found."
    onChange={[Function]}
    onSearchChange={[Function]}
    openOnFocus={true}
    options={
      Array [
        Object {
          "key": "1",
          "text": "ABC company inc.",
          "value": "ABC",
        },
      ]
    }
    placeholder="Search for a stock..."
    renderLabel={[Function]}
    search={true}
    searchInput="text"
    selectOnBlur={true}
    selectOnNavigation={true}
    selection={true}
    wrapSelection={true}
  />
</styled.div>
`;

exports[`<HomePageContainer /> renders the ResultMessage if resultMessageProps is present 1`] = `
<styled.div>
  <styled.div>
    <img
      alt="Tayyib Stocks Logo"
      src="tstocks_full_logo.png"
    />
  </styled.div>
  <Dropdown
    additionLabel="Add "
    additionPosition="top"
    closeOnBlur={true}
    deburr={false}
    icon="dropdown"
    minCharacters={1}
    noResultsMessage="No results found."
    onChange={[Function]}
    onSearchChange={[Function]}
    openOnFocus={true}
    options={Array []}
    placeholder="Search for a stock..."
    renderLabel={[Function]}
    search={true}
    searchInput="text"
    selectOnBlur={true}
    selectOnNavigation={true}
    selection={true}
    wrapSelection={true}
  />
  <ResultMessage
    description="Test description"
    isFailure={false}
    size="huge"
    title="Test title"
  />
</styled.div>
`;

exports[`<HomePageContainer /> renders the chart if chartValues is present 1`] = `
<styled.div>
  <styled.div>
    <img
      alt="Tayyib Stocks Logo"
      src="tstocks_full_logo.png"
    />
  </styled.div>
  <Dropdown
    additionLabel="Add "
    additionPosition="top"
    closeOnBlur={true}
    deburr={false}
    icon="dropdown"
    minCharacters={1}
    noResultsMessage="No results found."
    onChange={[Function]}
    onSearchChange={[Function]}
    openOnFocus={true}
    options={Array []}
    placeholder="Search for a stock..."
    renderLabel={[Function]}
    search={true}
    searchInput="text"
    selectOnBlur={true}
    selectOnNavigation={true}
    selection={true}
    wrapSelection={true}
  />
  <ResultChart
    chartValues={
      Object {
        "cashFail": 10.25,
        "cashPass": 33,
        "debtFail": 10.25,
        "debtPass": 33,
        "receivablesFail": 10.25,
        "receivablesPass": 33,
      }
    }
  />
</styled.div>
`;
